cabal-version: >= 1.10

name        : mantis
version     : 0.2.2.0
license     : MIT
license-file: LICENSE
author      : Brian W Bush
maintainer  : code@functionally.io
category    : Network
build-type  : Simple

executable mantis
  main-is         : Main.hs
  other-modules   : Mantis.Asset
                    Mantis.Command
                    Mantis.Command.Fingerprint
                    Mantis.Command.Mint
                    Mantis.Command.Script
                    Mantis.Command.Transact
                    Mantis.Command.Types
                    Mantis.Query
                    Mantis.Script
                    Mantis.Transaction
                    Mantis.Types
                    Mantis.Wallet
                    Paths_mantis
  build-depends   : base >= 4.14 && < 4.15
                  , aeson
                  , aeson-pretty
                  , base16-bytestring
                  , bech32
                  , bytestring
                  , cardano-api
                  , cardano-cli
                  , cardano-ledger
                  , cardano-ledger-shelley-ma
                  , cardano-node
                  , containers
                  , cryptonite
                  , extra
                  , memory
                  , mtl
                  , optparse-applicative
                  , ouroboros-consensus-cardano
                  , ouroboros-consensus-shelley
                  , ouroboros-network
                  , shelley-spec-ledger
                  , text
                  , transformers
                  , transformers-except
                  , unordered-containers
  other-extensions:
  hs-source-dirs  : app
  default-language: Haskell2010
  ghc-options     : -Wall
