cabal-version: >= 1.10

name        : mantis
version     : 0.2.10.1
license     : MIT
license-file: LICENSE
author      : Brian W Bush
maintainer  : code@functionally.io
category    : Network
build-type  : Simple

executable mantis
  main-is         : Main.hs
  other-modules   : Mantis.Asset
                    Mantis.Chain
                    Mantis.Chain.Internal
                    Mantis.Command
                    Mantis.Command.Bech32
                    Mantis.Command.Chain
                    Mantis.Command.Fingerprint
                    Mantis.Command.Info
                    Mantis.Command.Mint
                    Mantis.Command.Script
                    Mantis.Command.Transact
                    Mantis.Command.Types
                    Mantis.Query
                    Mantis.Script
                    Mantis.Transaction
                    Mantis.Types
                    Mantis.Wallet
                    Paths_mantis
  build-depends   : base >= 4.14 && < 4.15
                  , aeson
                  , aeson-pretty
                  , base16-bytestring
                  , bech32
                  , bytestring
                  , cardano-api
                  , containers
                  , cryptonite
                  , extra
                  , filepath
                  , memory
                  , mtl
                  , optparse-applicative
                  , ouroboros-network
                  , text
                  , transformers
                  , transformers-except
                  , unordered-containers
  other-extensions:
  hs-source-dirs  : app
  default-language: Haskell2010
  ghc-options     : -Wall
