cabal-version: >= 1.10

name              : mantis
description       : This tool provides several script-oriented utilities for the Cardano blockchain. In particular, it posts metadata or mints/burns tokens. It can also generate scripts, compute script addresses, compute the fingerprint of a token, and download scripts.
version           : 0.3.0.0
license           : MIT
license-file      : LICENSE
author            : Brian W Bush
maintainer        : code@functionally.io
category          : Network
build-type        : Simple
extra-source-files: ReadMe.md

library
  exposed-modules : Mantis.Asset
--                  Mantis.Chain
--                  Mantis.Chain.Internal
                    Mantis.Query
                    Mantis.Script
--                  Mantis.Transaction
                    Mantis.Types
                    Mantis.Wallet
  build-depends   : base >= 4.14 && < 4.15
                  , aeson
                  , aeson-pretty
                  , base16-bytestring
                  , bech32
                  , bytestring
                  , cardano-api
                  , cardano-ledger-shelley-ma
                  , containers
                  , cryptonite
                  , extra
                  , filepath
                  , memory
                  , mtl
                  , ouroboros-network
                  , shelley-spec-ledger
                  , text
                  , transformers
                  , transformers-except
                  , unordered-containers
  hs-source-dirs  : src
  default-language: Haskell2010
  ghc-options     : -Wall

executable mantis
  main-is         : Main.hs
  other-modules   : Mantis.Command
                    Mantis.Command.Bech32
--                  Mantis.Command.Chain
                    Mantis.Command.Fingerprint
--                  Mantis.Command.Info
--                  Mantis.Command.Mint
                    Mantis.Command.Script
--                  Mantis.Command.Transact
                    Mantis.Command.Types
--                  Mantis.Command.Watch
                    Paths_mantis
  build-depends   : base >= 4.14 && < 4.15
                  , aeson
                  , aeson-pretty
                  , base16-bytestring
                  , bech32
                  , bytestring
                  , cardano-api
                  , containers
                  , cryptonite
                  , extra
                  , filepath
                  , mantis
                  , memory
                  , mtl
                  , optparse-applicative
                  , ouroboros-network
                  , text
                  , transformers
                  , transformers-except
                  , unordered-containers
  hs-source-dirs  : app
  default-language: Haskell2010
  ghc-options     : -Wall
